tests/negative/neg_imported_shared_global.safe
-- Expected: REJECT task_variable_ownership
with Provider_Transitive_Global;

package Neg_Imported_Shared_Global

   task A

      loop
         Provider_Transitive_Global.Touch;

   task B

      loop
         Provider_Transitive_Global.Touch;

